Added authentication and authorization. Basic API access with bearer token. Basic package setup.

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,80 +1,3 @@
-:root {
-    --background-color-dark: #000;
-    --background-color-dark-card: rgb(59, 59, 59);
-    --background-color-light: #fff;
-    --background-color-light-card: rgb(236, 236, 236);
-
-    --text-color-light: #fff;
-    --text-color-dark: #000;
-
-    --border-radius-card: 12px;
-}
-
-* {
-    box-sizing: border-box;
-}
-
-html, body {
-    margin: 0;
-    padding: 0;
-    background-color: var(--background-color-light);
-    font-family: 'Montserrat', sans-serif;
-}
-
-main {
-    padding: 24px;
-}
-
-div.wrapper {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-}
-
-#sidebar {
-    display: flex;
-    flex-direction: column;
-    height: 100vh;
-    width: 200px;
-}
-
-#sidebar > section {
-    display: flex;
-    flex-direction: column;
-}
-
-#sidebar > section[data-title]::before {
-    content: attr(data-title);
-    font-weight: bold;
-    font-size: .8em;
-    margin-top: 1.2em;
-    margin-left: 16px;
-}
-
-#sidebar > section > a {
-    color: var(--text-color-light);
-    background-color: var(--background-color-dark-card);
-    padding: 10px 16px;
-    margin: 8px 12px 8px 0;
-    border-radius: 0 var(--border-radius-card) var(--border-radius-card) 0;
-    border: 2px solid var(--background-color-dark-card);
-    text-decoration: none;
-
-    transition: background-color .3s ease;
-}
-
-#sidebar > section > a:hover {
-    background-color: transparent;
-}
-
-.card {
-    background-color: var(--background-color-light-card);
-    color: var(--text-color-dark);
-    border-radius: var(--border-radius-card);
-    padding: 18px;
-}
-
-.dark {
-    background-color: var(--background-color-dark);
-    color: var(--text-color-light);
-}
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
